fix alignment issue in header.

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -31,7 +31,7 @@
     // width: 2.3rem;
     // height: 5.3rem;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     @include respond(tab-land) {
       justify-content: center;
     }
